Revert "Fix bug with Data Object Interceptor picking up too much." Seems to be preventing someone from saving the file. This reverts commit c807dbcb2c1c2a30a1c8e20851c60082d46eddeb.

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -78,6 +78,3 @@ html, body {
   right: 10px;
 }
 
-.djs-palette.two-column.open {
-  width: 95px;
-}
